<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_main">

    <TextView
        android:id="@+id/textNotificationSettings"
        style="@style/Text.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/restart_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/backgroundSchedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNotificationSettings"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/buttonApply"
            style="@style/Text.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/buttonUnset"
            android:gravity="center"
            android:text="@string/schedule"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/buttonUnset"
            style="@style/Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/square"
            android:contentDescription="@string/unset"
            android:padding="0dp"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
