...
    <string name="uptime">Uptime</string>
    <string name="active_widgets">Active widgets</string>
    <string name="device_running_for">Device running for %s</string>
    <string name="restart">Restart Device</string>
    <string name="restart_device">Time has come to restart your device. It\'s important for its well-being!</string>
    <string name="notify_every">Notify every</string>
    <string name="apply">Apply</string>
    <string name="unset">Unset</string>
    <string name="schedule">Schedule</string>
    <string name="title">Title</string>
    <string name="smart_display">Smart time display</string>
    <string name="smart_time_details">Time will adapt smartly so as to be human readable</string>
    <string name="not_smart_time_details">The timer will always show HH:MM</string>
...
    <string name="file_size">Size: %s</string>
    <string name="show_logs">Show log file</string>
    <string name="sure_delete_log">Are you sure you want to delete the log file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_logging">Enable logging</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="crashlytics_opt_in">Do you agree to allow the collection of anonymous crash and analytics data?</string>
    <string name="provide_crash_data">Provide crash data</string>
    <string name="provide_crash_data_summary">Send crash data to improve application functionality</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied.\nSharing file is not possible.</string>
...
