<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewNotificationAlert"
    style="@style/Text.Primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/restart_now_error"
    android:textColor="?attr/colorError"
    tools:showIn="@layout/fragment_main" />